[package]
edition = "2018"
license = "Apache-2.0"
name = "coach"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arbitrary = {version = "1.0.2", features = ["derive"]}
time = {version = "0.3.2", features = ["formatting", "macros"]}
