[package]
edition = "2018"
license = "Apache-2.0"
name = "coach"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arbitrary = {version = "1.0.2", features = ["derive"]}
clap = "2.33.3"
time = {version = "0.3.2", features = ["formatting", "macros", "parsing"]}

[[bin]]
name = "coach"
src = "src/main.rs"

[lib]
name = "coach"
src = "src/lib.rs"
