[package]
edition = "2018"
license = "Apache-2.0"
name = "coach"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arbitrary = {version = "1.0", features = ["derive"]}
clap = "2.33"
tempfile = "3.2"
time = {version = "0.3.5", features = ["formatting", "macros", "local-offset", "parsing", "std"]}

[[bin]]
name = "coach"
src = "src/main.rs"

[lib]
name = "coach"
src = "src/lib.rs"
